# OpenCV_AndroidStudio

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/diego/opencv_45/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/diego/opencv_45/: ColorBlobDetector.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/diego/opencv_45/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
